dist/1.0/bin/sample/retrieveUnpackaged/objects/Costs_Config_Table__c.object
<CustomObject>
    <description>Database Costs dictionary table</description>
    <fields>
        <fullName>BU__c</fullName>
        <label>BU</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Account__c</fullName>
        <label>Cost Account</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MOR_Account__c</fullName>
        <label>MOR Account</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Raport_name__c</fullName>
        <label>Raport name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_cost__c</fullName>
        <label>Type of cost</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Costs Config Table</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Raport_name__c</columns>
        <columns>Type_of_cost__c</columns>
        <columns>Cost_Account__c</columns>
        <columns>BU__c</columns>
        <columns>Product__c</columns>
        <columns>MOR_Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Detail_View</fullName>
        <columns>NAME</columns>
        <columns>Raport_name__c</columns>
        <columns>Type_of_cost__c</columns>
        <columns>Cost_Account__c</columns>
        <columns>BU__c</columns>
        <columns>Product__c</columns>
        <columns>MOR_Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Raport_name__c</field>
            <operation>contains</operation>
        </filters>
        <filters>
            <field>Type_of_cost__c</field>
            <operation>contains</operation>
            <value>CROF,crth</value>
        </filters>
        <label>Detail View</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Object ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Costs Config Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>